--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "nautilus_exiftool"
-dynamic = ["version"]
+version = "0.1.0"
 description = "an extension for nautilus/caja, which adds all exif metadata from files"
 authors = [
     {name = "Rémi Germain", email = "contact@germainremi.fr"},
